adding enw functionality
